# rodmap

./: .gitignore  DIAGRAMA_FLUJO_SISTEMA.md  Dockerfile  README.md  docker-compose.yml  ingest_docs.py  pyproject.toml  requirements.txt  reset_index.py  test_chat.py  test_frontend_simulation.py  test_rag.py  test_rag_sources.py
data/: dev_history.db  documents.json
src/: main.py
src/adapters/: __init__.py
src/adapters/azure/: __init__.py  ai_search.py  openai_client.py
src/adapters/local/: __init__.py  json_indexer.py  postgres_repo.py  sqlite_repo.py  user_repo.py
src/adapters/parsers/: __init__.py  output_parsers.py
src/api/: graph.py  routes.py
src/api/core/: config.py  state.py
src/api/llm/: classifier.py  client.py
src/api/search/: indexer.py  models.py  retriever.py  service.py
src/application/: __init__.py  graph.py  state.py
src/application/nodes/: __init__.py
src/application/nodes/classifier/: __init__.py  classifier_node.py
src/application/nodes/extractor/: __init__.py  extractor_node.py
src/application/nodes/retriever/: __init__.py  retriever_node.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  schemas.py
src/domain/ports/: __init__.py  db_port.py  search_port.py
src/infrastructure/: __init__.py  azure_setup.py  security.py
src/routes/: __init__.py  auth.py  deps.py  routes.py
src/tools/: indexer.py
